# resourcesPublic

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  NOTICE.md  README.md  resourcesConfig.cmake  vcpkg-configuration.json  vcpkg.json
.teamcity/: pom.xml
.teamcity/Windows/: Project.kt
.teamcity/_Self.kt/: Project.kt
.teamcity/_Self.kt/buildTypes/: CreateUniversalBuilds.kt  PublishToPerforce.kt
cli/: CMakeLists.txt
cli/src/: ApplyPatchCliOperation.cpp  ApplyPatchCliOperation.h  ApplyPatchOperation.cpp  ApplyPatchOperation.h  Cli.cpp  Cli.h  CliOperation.cpp  CliOperation.h  CreateBundleCliOperation.cpp  CreateBundleCliOperation.h  CreatePatchCliOperation.cpp  CreatePatchCliOperation.h  CreateResourceGroupCliOperation.cpp  CreateResourceGroupCliOperation.h  DiffResourceGroupCliOperation.cpp  DiffResourceGroupCliOperation.h  MergeResourceGroupCliOperation.cpp  MergeResourceGroupCliOperation.h  RemoveResourcesCliOperation.cpp  RemoveResourcesCliOperation.h  UnpackBundleCliOperation.cpp  main.cpp
cmake/triplets/: arm64-osx-carbon.cmake  x64-windows-carbon.cmake
customized_toolchain/toolchains/: arm64-osx-carbon.cmake  x64-osx-carbon.cmake  x64-windows-carbon.cmake
customized_toolchain/triplets/: arm64-osx-debug.cmake  arm64-osx-internal.cmake  arm64-osx-release.cmake  arm64-osx-trinitydev.cmake  x64-osx-debug.cmake  x64-osx-internal.cmake  x64-osx-release.cmake  x64-osx-trinitydev.cmake  x64-windows-debug.cmake  x64-windows-internal.cmake  x64-windows-release.cmake  x64-windows-trinitydev.cmake
doc/source/: conf.py  installation.rst
doc/source/DesignDocuments/: filesystemDesign.rst  resourceGroupFileFormat.rst
doc/source/Guides/: HowToApplyAPatch.rst  HowToCreateAResourceGroup.rst  HowToUnpackABundle.rst
doc/source/OverviewDocuments/: patchingProcess.rst
doc/source/QuickStart/: ExamplePatchCreationProcedure.rst
doc/source/Tools/: api.rst  cli.rst
include/: BinaryResourceGroup.h  BundleResourceGroup.h  Enums.h  PatchResourceGroup.h  Resource.h  ResourceGroup.h
src/: BundleResourceGroup.cpp  BundleResourceGroupImpl.cpp  BundleResourceGroupImpl.h  Enums.cpp  ParameterVersion.cpp  ParameterVersion.h  PatchResourceGroup.cpp  PatchResourceGroupImpl.cpp  PatchResourceGroupImpl.h  Resource.cpp  ResourceGroup.cpp  ResourceGroupFactory.cpp  ResourceGroupFactory.h  ResourceGroupImpl.cpp  ResourceGroupImpl.h  ResourceImpl.cpp  ResourceImpl.h  StatusSettings.cpp  StatusSettings.h  src.md
src/ResourceInfo/: PatchResourceInfo.cpp  PatchResourceInfo.h  ResourceInfo.cpp  ResourceInfo.h
tests/: CMakeLists.txt  tests.md
tests/performanceTests/: ApplyBundledPatch.ps1  CreateBundledPatch.ps1  README.md
tests/src/: CarbonResourcesCliTest.cpp  CarbonResourcesLibraryTest.cpp  CarbonResourcesTestFixture.cpp  CarbonResourcesTestFixture.h  CliTestFixture.h  ResourceToolsLibraryTest.cpp  ResourcesCliTest.cpp  ResourcesLibraryTest.cpp  ResourcesTestFixture.cpp  ResourcesTestFixture.h
tests/testData/Bundle/: BundleResourceGroup.yaml
tests/testData/CreateBundle/: BundleResourceGroup.yaml
tests/testData/CreateResourceFiles/: ResourceGroup.yaml  ResourceGroupMacOS.csv  ResourceGroupMacOSPrefixed.csv  (+2 more)
tools/: CMakeLists.txt
tools/include/: BundleStreamOut.h  ChunkIndex.h  CompressedFileDataStreamOut.h  FileDataStreamIn.h  FileDataStreamOut.h  ResourceTools.h  StatusCallback.h
tools/src/: BundleStreamOut.cpp  ChunkIndex.cpp  CompressedFileDataStreamOut.cpp  Downloader.cpp  FileDataStreamIn.cpp  GzipCompressionStream.cpp  GzipDecompressionStream.cpp  ResourceTools.cpp
(+42 files in other folders)
